@@ -1,2 +1,8 @@
 # PrisonBreak
 Sistem Gestiune Penitenciar
+
+
+Pentru rulare:
+--module-path /path/to/JavaFX/lib --add-modules=javafx.controls
+
+la path se pune locatia sdk-ului de la JavaFx
